--- a/index.html
+++ b/index.html
@@ -31,23 +31,15 @@
         </p>
     </div>
 
-
-    <hr>
-
     <div class="navigacija">
-        <h3 style="text-align:center;">
-            <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
-            |
-            <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
-            |
-            <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
-            |
-            <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
-            |
-            <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
-        </h3>
+        <ul>
+            <li><a class="aktivan" href="index.html">POČETNA</a></li>
+            <li><a href="igre.html">IGRE</a></li>
+            <li><a href="muzikaIgara.html">MUZIKA IGARA</a></li>
+            <li><a href="about.html">O STRANICI</a></li>
+            <li><a href="contact.html">KONTAKTIRANJE</a></li>
+        </ul>
     </div>
-
 
     <h4>Tabela:</h4>
     <div>
@@ -103,9 +95,6 @@
         </table>
     </div>
 
-
-    <hr>
-
     <h4>Lista:</h4>
     <div>
         <ul>
@@ -153,37 +142,24 @@
         </ul>
     </div>
 
-    <hr>
-
     <div>
         <h4>
             Sajtovi individualnih igara:
             <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
-            |
             <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
-            |
             <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
-            |
             <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
-            |
             <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
         </h4>
     </div>
 
-
-    <hr>
-
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
 
     <br>
-    <hr>
 
-    <div>
-        <p>
-            <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
-        </p>
+    <div class="kaVrhu">
+        <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
-
 
 </body>
 
