--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -21,19 +21,15 @@
 <body>
     <h2 id="vrh"></h2>
 
-    <h3 style="font-family: 'Roboto', sans-serif; text-align:center; background-color: rgb(0, 35, 102);">
-        <br>
-        <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
-        |
-        <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
-        |
-        <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
-        |
-        <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
-        |
-        <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
-        <hr>
-    </h3>
+    <div class="navigacija">
+        <ul>
+            <li><a href="index.html">POČETNA</a></li>
+            <li><a href="igre.html">IGRE</a></li>
+            <li><a class="aktivan" href="muzikaIgara.html">MUZIKA IGARA</a></li>
+            <li><a href="about.html">O STRANICI</a></li>
+            <li><a href="contact.html">KONTAKTIRANJE</a></li>
+        </ul>
+    </div>
 
     <h2>
         Muzika Igara
@@ -46,9 +42,11 @@
             die</i> iz igrice <b>League of Legends</b>.
     </p>
 
-    <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="300" height="380" frameborder="0"
-        allowtransparency="true" allow="encrypted-media">
-    </iframe>
+    <div>
+        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="300" height="380"
+            frameborder="0" allowtransparency="true" allow="encrypted-media">
+        </iframe>
+    </div>
 
     <hr>
     <br>
@@ -57,23 +55,26 @@
         Još jedna pesma koja mi se sviđa je uvodna špica iz igrice <b> Halo</b>
     </p>
 
-    <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380" frameborder="0"
-        allowtransparency="true" allow="encrypted-media"></iframe>
+    <div>
+        <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380"
+            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
     <hr>
     <br>
-
 
     <p>
         Igrica <b>Call Of Duty: Warzone</b> ima dobru plejlistu pesama
     </p>
 
-    <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
-        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <div>
+        <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
+            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
     <hr>
 
-    <p>
-        <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
-    </p>
+    <div class="kaVrhu">
+        <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
+    </div>
 </body>
