--- a/about.html
+++ b/about.html
@@ -31,10 +31,21 @@
         </ul>
     </div>
 
-    <h2>O Stranici</h2>
+    <h3>O Stranici</h3>
     <p>
         Ovo je stranica sa listom <strong><em>top 5 najboljih igrica do 2020. godine</em></strong> po mom mišljenju. Na
-        listi se nalaze igre <em>Brawlhalla, Call Of Duty: Warzone, Grand Theft Auto 5, League of Legends, Halo 3</em>.
+        listi se nalaze igre:</p>
+        <div>
+            <ol id="listaIgara">
+            <li>Brawlhalla</li>
+            <li>Call Of Duty: Warzone</li>
+            <li>Grand Theft Auto 5</li>
+            <li>League of Legends</li>
+            <li>Halo 3</li>
+        </ol>
+        </div>
+
+        <p>
         Na
         listi je prvo trebao da se nađe <del>Halo 5: Guardians</del>, ali sam se predomislio u korist igre Halo 3 zato
         što je za to vreme bila mnogo bolje urađena.
@@ -76,7 +87,7 @@
 
     <hr>
 
-    <div class="kaVrhu">
+    <div id="kaVrhu">
         <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
 </body>
