--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
         </ul>
     </div>
 
-    <h2>Kontaktiranje</h2>
+    <h3>Kontaktiranje</h3>
+    <div>
     <form>
         <fieldset>
             <legend>Lične informacije <sub>1</sub> </legend>
@@ -97,12 +98,13 @@
             <textarea name="komentar" cols="100" rows="10">Napišite komentar ovde...</textarea>
         </fieldset>
         <br><br>
-        <input type="submit" value="Pošalji">
+        <input id="slanje" type="submit" value="Pošalji">
     </form>
+    </div>
 
     <hr>
 
-    <div class="kaVrhu">
+    <div id="kaVrhu">
         <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
 </body>
