--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 godine</strong>
         </h1>
 
-        <p style="text-align:center"> <b>Luka Momčilović</b><sup>&copy;</sup> 2021. -
+        <p id="copyright" style="text-align:center"> <b>Luka Momčilović</b><sup>&copy;</sup> 2021. -
             <ins>sva prava zadržana</ins>
         </p>
     </div>
@@ -41,7 +41,7 @@
         </ul>
     </div>
 
-    <h4>Tabela:</h4>
+    <h3>Tabela:</h3>
     <div>
         <table border="1"
             style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
@@ -95,7 +95,7 @@
         </table>
     </div>
 
-    <h4>Lista:</h4>
+    <h3>Lista:</h3>
     <div>
         <ul>
             <li>
@@ -143,21 +143,19 @@
     </div>
 
     <div>
-        <h4>
-            Sajtovi individualnih igara:
+        <h4 style="text-align: center;">Sajtovi individualnih igara:</h4>
             <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
             <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
             <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
             <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
             <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
-        </h4>
     </div>
 
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
 
     <br>
 
-    <div class="kaVrhu">
+    <div id="kaVrhu">
         <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
 
