--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -74,7 +74,7 @@
 
     <hr>
 
-    <div class="kaVrhu">
+    <div id="kaVrhu">
         <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
 </body>
