--- a/igre.html
+++ b/igre.html
@@ -31,46 +31,54 @@
         </ul>
     </div>
 
-    <h2>Igre</h2>
-    <h4 style="text-align:center">
-        <br>
-        <a href="https://en.wikipedia.org/wiki/Brawlhalla" target="_blank">Brawlhalla</a>
-        <br>
-        <a href="Images/brawlhalla.jpg" target="_blank"><img src="Images/brawlhalla.jpg" alt="Brawlhalla"
-                width="40%"></a>
-        <br>
-        <hr>
-        <br>
-        <a href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="_blank">Call Of Duty: Warzone</a>
-        <br>
-        <a href="Images/CallOfDutyWarzone.jpg" target="_window"><img src="Images/CallOfDutyWarzone.jpg"
-                alt="Call Of Duty: Warzone" width="40%"></a>
-        <br>
-        <hr>
-        <br>
-        <a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
-        <br>
-        <a href="Images/GrandTheftAuto5.jpg" target="_blank"><img src="Images/GrandTheftAuto5.jpg"
-                alt="Grand Theft Auto 5" width="40%"></a>
-        <br>
-        <hr>
-        <br>
-        <a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
-        <br>
-        <a href="Images/LeagueOfLegends.jpg" target="_blank"><img src="Images/LeagueOfLegends.jpg"
-                alt="League Of Legends" width="40%"></a>
-        <br>
-        <hr>
-        <br>
-        <a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
-        <br>
-        <a href="Images/Halo3.jpg" target="_blank"><img src="Images/Halo3.jpg" alt="Halo 3
-            " width="40%"></a>
-    </h4>
+    <h3>Igre</h3>
+    <div>
+        <h4 style="text-align:center">
+            <div>
+                <a href="https://en.wikipedia.org/wiki/Brawlhalla" target="_blank">Brawlhalla</a>
+                <br>
+                <a href="Images/brawlhalla.jpg" target="_blank"><img src="Images/brawlhalla.jpg" alt="Brawlhalla"
+                        width="40%"></a>
+            </div>
+
+            <br>
+
+            <div>
+                <a href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="_blank">Call Of Duty: Warzone</a>
+                <br>
+                <a href="Images/CallOfDutyWarzone.jpg" target="_window"><img src="Images/CallOfDutyWarzone.jpg"
+                        alt="Call Of Duty: Warzone" width="40%"></a>
+            </div>
+
+            <br>
+
+            <div><a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
+                <br>
+                <a href="Images/GrandTheftAuto5.jpg" target="_blank"><img src="Images/GrandTheftAuto5.jpg"
+                        alt="Grand Theft Auto 5" width="40%"></a>
+            </div>
+
+            <br>
+
+            <div><a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
+                <br>
+                <a href="Images/LeagueOfLegends.jpg" target="_blank"><img src="Images/LeagueOfLegends.jpg"
+                        alt="League Of Legends" width="40%"></a>
+            </div>
+
+            <br>
+
+            <div><a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
+                <br>
+                <a href="Images/Halo3.jpg" target="_blank"><img src="Images/Halo3.jpg" alt="Halo 3
+            " width="40%"></a></div>
+        </h4>
+    </div>
+
 
     <hr>
 
-    <div class="kaVrhu">
+    <div id="kaVrhu">
         <a href="#vrh"><img src="Images/UpArrow.png" width="100%"></a>
     </div>
 </body>
