--- a/igre.html
+++ b/igre.html
@@ -34,7 +34,7 @@
     <h3>Igre</h3>
     <div>
         <h4 style="text-align:center">
-            <div>
+            <div class="slika">
                 <a href="https://en.wikipedia.org/wiki/Brawlhalla" target="_blank">Brawlhalla</a>
                 <br>
                 <a href="Images/brawlhalla.jpg" target="_blank"><img src="Images/brawlhalla.jpg" alt="Brawlhalla"
@@ -43,7 +43,7 @@
 
             <br>
 
-            <div>
+            <div class="slika">
                 <a href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="_blank">Call Of Duty: Warzone</a>
                 <br>
                 <a href="Images/CallOfDutyWarzone.jpg" target="_window"><img src="Images/CallOfDutyWarzone.jpg"
@@ -52,7 +52,7 @@
 
             <br>
 
-            <div><a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
+            <div class="slika"><a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
                 <br>
                 <a href="Images/GrandTheftAuto5.jpg" target="_blank"><img src="Images/GrandTheftAuto5.jpg"
                         alt="Grand Theft Auto 5" width="40%"></a>
@@ -60,7 +60,7 @@
 
             <br>
 
-            <div><a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
+            <div class="slika"><a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
                 <br>
                 <a href="Images/LeagueOfLegends.jpg" target="_blank"><img src="Images/LeagueOfLegends.jpg"
                         alt="League Of Legends" width="40%"></a>
@@ -68,7 +68,7 @@
 
             <br>
 
-            <div><a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
+            <div class="slika"><a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
                 <br>
                 <a href="Images/Halo3.jpg" target="_blank"><img src="Images/Halo3.jpg" alt="Halo 3
             " width="40%"></a></div>
