--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
     </div>
 
-    <h3>Tabela:</h3>
+    <h3>Tabela</h3>
     <div>
         <table border="1"
             style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
@@ -95,7 +95,7 @@
         </table>
     </div>
 
-    <h3>Lista:</h3>
+    <h3>Lista</h3>
     <div>
         <ul>
             <li>
