--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -31,9 +31,9 @@
         </ul>
     </div>
 
-    <h2>
+    <h3>
         Muzika Igara
-    </h2>
+    </h3>
 
     <br>
 
@@ -43,7 +43,7 @@
     </p>
 
     <div>
-        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="300" height="380"
+        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="100%" height="380"
             frameborder="0" allowtransparency="true" allow="encrypted-media">
         </iframe>
     </div>
