--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
 <body>
     <h2 id="vrh"></h2>
 
+    <img id="gamepad" src="Images/gamepad.gif">
+
     <div class="navigacija">
         <ul>
             <li><a href="index.html">POČETNA</a></li>
