--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
         </ul>
     </div>
 
+        <img id="nyan" src="Images/nyancat.gif">
+
     <h3>Kontaktiranje</h3>
     <div>
     <form>
