--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body  style="background-image: url(Images/controller.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <h2 id="vrh"></h2>
 
     <div class="header">
@@ -142,13 +142,13 @@
         </ul>
     </div>
 
-    <div>
-        <h4 style="text-align: center;">Sajtovi individualnih igara:</h4>
-            <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
-            <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
-            <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
-            <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
-            <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
+    <div style="width: auto;">
+        <h4  style="text-align: center;">Sajtovi individualnih igara:</h4>
+            <a class="sajtovi" href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
+            <a class="sajtovi" href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
+            <a class="sajtovi" href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
+            <a class="sajtovi" href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
+            <a class="sajtovi" href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
     </div>
 
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
