--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body  style="background-image: url(Images/controller.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<body
+    style="background-image: url(Images/controller.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <h2 id="vrh"></h2>
 
     <div class="header">
@@ -40,8 +41,11 @@
             <li><a href="contact.html">KONTAKTIRANJE</a></li>
         </ul>
     </div>
-
-    <h3>Tabela</h3>
+    <br><br>
+    <h3>Tabela:</h3>
+    <p class="prvaStrana">
+        Ovde se nalazi tabela popularnosti 5 igara koje su se meni najviše svidele.
+    </p>
     <div>
         <table border="1"
             style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
@@ -94,8 +98,12 @@
             </tr>
         </table>
     </div>
-
-    <h3>Lista</h3>
+    <br><br>
+    <h3>Lista:</h3>
+    <p class="prvaStrana">
+        Ovde je lista gore navedenih 5 igara s tim što su igre u ovoj listi sortirane po broju aktivnih igrača u svakom
+        kvartalu 2020. godine.
+    </p>
     <div>
         <ul>
             <li>
@@ -142,13 +150,22 @@
         </ul>
     </div>
 
-    <div style="width: auto;">
-        <h4  style="text-align: center;">Sajtovi individualnih igara:</h4>
-            <a class="sajtovi" href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
-            <a class="sajtovi" href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
-            <a class="sajtovi" href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
-            <a class="sajtovi" href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
-            <a class="sajtovi" href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
+    <br><br>
+    <p class="prvaStrana">
+        Ispod se nalaze linkovi ka sajtovima igara, a sajtovi će se prikazati u frejmu koji se nalazi ispod.
+    </p>
+
+    <div style="width: auto; text-align: center;">
+        <h4 style="text-align: center;">Sajtovi individualnih igara:</h4>
+        <a class="sajtovi" href="https://www.brawlhalla.com/" target="prvi_iframe"><span>Brawlhalla</span></a>
+        <a class="sajtovi" href="https://www.callofduty.com/warzone" target="prvi_iframe"><span>Call Of Duty:
+                Warzone</span></a>
+        <a class="sajtovi" href="https://www.rockstargames.com/V/" target="prvi_iframe"><span>Grand Theft Auto
+                5</span></a>
+        <a class="sajtovi" href="https://eune.leagueoflegends.com/" target="prvi_iframe"><span>League Of
+                Legends</span></a>
+        <a class="sajtovi" href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe"><span>Halo
+                3</span></a>
     </div>
 
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
