--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <img id="nyan" src="Images/nyancat.gif">
 
     <h3>Kontaktiranje</h3>
-    <div>
+    <div style="width: 100%;">
     <form>
         <fieldset>
             <legend>Lične informacije <sub>1</sub> </legend>
@@ -97,7 +97,7 @@
             </p>
             <br>
             <p>Komentar:</p>
-            <textarea name="komentar" cols="100" rows="10">Napišite komentar ovde...</textarea>
+            <textarea name="komentar" cols="50" rows="10">Napišite komentar ovde...</textarea>
         </fieldset>
         <br><br>
         <input id="slanje" type="submit" value="Pošalji">
