--- a/contact.html
+++ b/contact.html
@@ -31,77 +31,77 @@
         </ul>
     </div>
 
-        <img id="nyan" src="Images/nyancat.gif">
+    <img id="nyan" src="Images/nyancat.gif">
 
     <h3>Kontaktiranje</h3>
-    <div style="width: 100%;">
-    <form>
-        <fieldset>
-            <legend>Lične informacije <sub>1</sub> </legend>
-            Ime:
-            <input type="text">
-            <br>
-            Prezime:
-            <input type="text">
-            <br><br>
-            Pol: <br>
-            <input type="radio" name="pol" value="m" checked>Muški<br>
-            <input type="radio" name="pol" value="z">Ženski<br>
-            <p>Datum rođenja: <input type="date"></p>
-            </p>
-        </fieldset>
-        <br>
-        <fieldset>
-            <legend>Utisci o sajtu <sub>2</sub> </legend>
-            <p>
-                Koliko vam se svideo sadržaj ovog vebsajta?
-                <select name="sadrzaj">
-                    <option selected>Svideo mi se jako</option>
-                    <option>Svideo mi se</option>
-                    <option>Malo mi se svideo</option>
-                    <option>Nije mi se svideo</option>
-                    <option>Baš mi se nije svideo</option>
-                </select>
-            </p>
-            <p>
-                Koja boja pozadine bi vam se najviše svidela za ovaj vebsajt?
-                <input type="color" name="color" value="#ffffff">
-            </p>
-            <p>
-                Koliko puta ste posetili ovaj sajt <sub>(približno)</sub> ?
-                <input type="number">
-            </p>
-            <p>
-                Koje od navedenih igara su vam se svidele? <br><br>
-                <input type="checkbox"> Brawlhalla <br>
-                <input type="checkbox"> Call Of Duty: Warzone <br>
-                <input type="checkbox"> Grand Theft Auto 5 <br>
-                <input type="checkbox"> League Of Legends <br>
-                <input type="checkbox"> Halo 3 <br>
-            </p>
-            <p>
-                Koliko vam se svidela pesma
-                <a href="muzikaIgara.html"><b>Legends never die</b></a>
-                ?
+    <div style="width: 90%;">
+        <form>
+            <fieldset>
+                <legend>Lične informacije <sub>1</sub> </legend>
+                Ime:
+                <input type="text">
                 <br>
-                <input type="range" name="pesma" id="LND" min="0" max="10">
-            </p>
-        </fieldset>
-        <br>
-        <fieldset>
-            <legend>Kontakt forma <sub>3</sub></legend>
-            <p>
-                Svrha kontaktiranja: <br><br>
-                <input type="checkbox"> Želim da prijavim problem <br>
-                <input type="checkbox"> Želim da napišem sugestiju <br>
-            </p>
+                Prezime:
+                <input type="text">
+                <br><br>
+                Pol: <br>
+                <input type="radio" name="pol" value="m" checked>Muški<br>
+                <input type="radio" name="pol" value="z">Ženski<br>
+                <p>Datum rođenja: <input type="date"></p>
+                </p>
+            </fieldset>
             <br>
-            <p>Komentar:</p>
-            <textarea name="komentar" cols="50" rows="10">Napišite komentar ovde...</textarea>
-        </fieldset>
-        <br><br>
-        <input id="slanje" type="submit" value="Pošalji">
-    </form>
+            <fieldset>
+                <legend>Utisci o sajtu <sub>2</sub> </legend>
+                <p>
+                    Koliko vam se svideo sadržaj ovog vebsajta?
+                    <select name="sadrzaj">
+                        <option selected>Svideo mi se jako</option>
+                        <option>Svideo mi se</option>
+                        <option>Malo mi se svideo</option>
+                        <option>Nije mi se svideo</option>
+                        <option>Baš mi se nije svideo</option>
+                    </select>
+                </p>
+                <p>
+                    Koja boja pozadine bi vam se najviše svidela za ovaj vebsajt?
+                    <input type="color" name="color" value="#ffffff">
+                </p>
+                <p>
+                    Koliko puta ste posetili ovaj sajt <sub>(približno)</sub> ?
+                    <input type="number">
+                </p>
+                <p>
+                    Koje od navedenih igara su vam se svidele? <br><br>
+                    <input type="checkbox"> Brawlhalla <br>
+                    <input type="checkbox"> Call Of Duty: Warzone <br>
+                    <input type="checkbox"> Grand Theft Auto 5 <br>
+                    <input type="checkbox"> League Of Legends <br>
+                    <input type="checkbox"> Halo 3 <br>
+                </p>
+                <p>
+                    Koliko vam se svidela pesma
+                    <a href="muzikaIgara.html"><b>Legends never die</b></a>
+                    ?
+                    <br>
+                    <input type="range" name="pesma" id="LND" min="0" max="10">
+                </p>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Kontakt forma <sub>3</sub></legend>
+                <p>
+                    Svrha kontaktiranja: <br><br>
+                    <input type="checkbox"> Želim da prijavim problem <br>
+                    <input type="checkbox"> Želim da napišem sugestiju <br>
+                </p>
+                <br>
+                <p>Komentar:</p>
+                <textarea style="width: 100%" name="komentar" cols="100" rows="15">Napišite komentar ovde...</textarea>
+            </fieldset>
+            <br><br>
+            <p style="text-align: center; font-size:150%"><input id="slanje" type="submit" value="Pošalji"></p>
+        </form>
     </div>
 
     <hr>
