--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -52,7 +52,7 @@
     <br>
 
     <p>
-        Još jedna pesma koja mi se sviđa je uvodna špica iz igrice <b> Halo</b>
+        Još jedna pesma koja mi se sviđa, a koju je nemoguće napomenuti je legendarna uvodna špica iz igrice <b> Halo</b>
     </p>
 
     <div>
