--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 
     <p>
         Na početnoj strani je prikazana prvo tabela u kojoj se nalaze procenat aktivnih igrača u svakom kvartalu. Ispod
-        tabele se nalazi prikaz istih podataka u obliku liste zarad drugačije preglednosti. Na dnu stranice se nalazi
-        forma gde se mogu videti sajtovi individualnih igara.
+        tabele se nalazi prikaz istih podataka u obliku liste zarad bolje preglednosti. Na dnu stranice se nalazi
+        forma gde se mogu videti wikipedia artikli individualnih igara.
     </p>
 
     <p>
@@ -65,7 +65,7 @@
         <dl>
             <dt><b>Igre</b></dt>
             <dd>
-                - nalaze se linkovi ka vikipediji za te igrice, kao i slika &lt;baner&gt; igre koja, kada se na
+                - nalaze se linkovi ka stranici određene igrice, kao i slika &lt;baner&gt; igre koja, kada se na
                 nju klikne vodi ka slici u punoj rezoluciji.
             </dd>
 
