--- a/igre.html
+++ b/igre.html
@@ -32,10 +32,14 @@
     </div>
 
     <h3>Igre</h3>
+    <p>
+        Ovde se nalaze glavne slike igara navedenih na <a href="index.html"><span style="padding: 0.5%;">početnoj strani</span></a>.
+        Klikom na sliku, slika će se otvoriti u punoj veličini u novom tabu, a klikom ta link iznad slike otvoriće se stranica te igrice takođe u novom tabu.
+    </p>
     <div>
         <h4 style="text-align:center">
             <div class="slika">
-                <a href="https://en.wikipedia.org/wiki/Brawlhalla" target="_blank">Brawlhalla</a>
+                <a href="https://www.brawlhalla.com/" target="_blank">Brawlhalla</a>
                 <br>
                 <a href="Images/brawlhalla.jpg" target="_blank"><img src="Images/brawlhalla.jpg" alt="Brawlhalla"
                         width="40%"></a>
@@ -44,7 +48,7 @@
             <br>
 
             <div class="slika">
-                <a href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="_blank">Call Of Duty: Warzone</a>
+                <a href="https://www.callofduty.com/warzone" target="_blank">Call Of Duty: Warzone</a>
                 <br>
                 <a href="Images/CallOfDutyWarzone.jpg" target="_window"><img src="Images/CallOfDutyWarzone.jpg"
                         alt="Call Of Duty: Warzone" width="40%"></a>
@@ -52,7 +56,7 @@
 
             <br>
 
-            <div class="slika"><a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
+            <div class="slika"><a href="https://www.rockstargames.com/V/" target="_blank">Grand Theft Auto 5</a>
                 <br>
                 <a href="Images/GrandTheftAuto5.jpg" target="_blank"><img src="Images/GrandTheftAuto5.jpg"
                         alt="Grand Theft Auto 5" width="40%"></a>
@@ -60,7 +64,7 @@
 
             <br>
 
-            <div class="slika"><a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
+            <div class="slika"><a href="https://eune.leagueoflegends.com/" target="_blank">League Of Legends</a>
                 <br>
                 <a href="Images/LeagueOfLegends.jpg" target="_blank"><img src="Images/LeagueOfLegends.jpg"
                         alt="League Of Legends" width="40%"></a>
@@ -68,7 +72,7 @@
 
             <br>
 
-            <div class="slika"><a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
+            <div class="slika"><a href="https://www.halowaypoint.com/en-us/games/halo-3" target="_blank">Halo 3</a>
                 <br>
                 <a href="Images/Halo3.jpg" target="_blank"><img src="Images/Halo3.jpg" alt="Halo 3
             " width="40%"></a></div>
