--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             </tr>
             <tr>
                 <th>&lt;Halo 3&gt;</th>
-                <td>72%</td>
-                <td>73%</td>
-                <td>73%</td>
-                <td>74%</td>
+                <td>4%</td>
+                <td>3%</td>
+                <td>4%</td>
+                <td>2%</td>
             </tr>
         </table>
     </div>
@@ -109,25 +109,24 @@
             <li>
                 Q1
                 <ol type="1">
-                    <li>Halo 3</li>
                     <li>League Of Legends</li>
                     <li>Grand Theft Auto 5</li>
                     <li>Brawlhalla</li>
                     <li>Call Of Duty: Warzone</li>
+                    <li>Halo 3</li>
                 </ol>
             </li>
             <li>Q2
                 <ol type="1">
-                    <li>Halo 3</li>
                     <li>League Of Legends</li>
                     <li>Grand Theft Auto 5</li>
                     <li>Brawlhalla</li>
                     <li>Call Of Duty: Warzone</li>
+                    <li>Halo 3</li>
                 </ol>
             </li>
             <li>Q3
                 <ol type="1">
-                    <li>Halo 3</li>
                     <li>League Of Legends</li>
                     <li>Grand Theft Auto 5</li>
                     <li>
@@ -136,15 +135,16 @@
                             <li>Brawlhalla</li>
                         </ol>
                     </li>
+                    <li>Halo 3</li>
                 </ol>
             </li>
             <li>Q4
                 <ol type="1">
-                    <li>Halo 3</li>
                     <li>League Of Legends</li>
                     <li>Grand Theft Auto 5</li>
                     <li>Brawlhalla</li>
                     <li>Call Of Duty: Warzone</li>
+                    <li>Halo 3</li>
                 </ol>
             </li>
         </ul>
@@ -152,23 +152,23 @@
 
     <br><br>
     <p class="prvaStrana">
-        Ispod se nalaze linkovi ka sajtovima igara, a sajtovi će se prikazati u frejmu koji se nalazi ispod.
+        Ispod se nalaze linkovi ka wikipediji igara, a koji će se prikazati u frejmu koji se nalazi ispod.
     </p>
 
     <div style="width: auto; text-align: center;">
         <h4 style="text-align: center;">Sajtovi individualnih igara:</h4>
-        <a class="sajtovi" href="https://www.brawlhalla.com/" target="prvi_iframe"><span>Brawlhalla</span></a>
-        <a class="sajtovi" href="https://www.callofduty.com/warzone" target="prvi_iframe"><span>Call Of Duty:
+        <a class="sajtovi" href="https://en.wikipedia.org/wiki/Brawlhalla" target="prvi_iframe"><span>Brawlhalla</span></a>
+        <a class="sajtovi" href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="prvi_iframe"><span>Call Of Duty:
                 Warzone</span></a>
-        <a class="sajtovi" href="https://www.rockstargames.com/V/" target="prvi_iframe"><span>Grand Theft Auto
+        <a class="sajtovi" href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="prvi_iframe"><span>Grand Theft Auto
                 5</span></a>
-        <a class="sajtovi" href="https://eune.leagueoflegends.com/" target="prvi_iframe"><span>League Of
+        <a class="sajtovi" href="https://sr.wikipedia.org/wiki/League_of_Legends" target="prvi_iframe"><span>League Of
                 Legends</span></a>
-        <a class="sajtovi" href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe"><span>Halo
+        <a class="sajtovi" href="https://en.wikipedia.org/wiki/Halo_3" target="prvi_iframe"><span>Halo
                 3</span></a>
     </div>
 
-    <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
+    <iframe src="https://en.wikipedia.org/wiki/Brawlhalla" width="100%" height="500px" name="prvi_iframe"></iframe>
 
     <br>
 
