--- a/igre.html
+++ b/igre.html
@@ -34,7 +34,7 @@
     <h3>Igre</h3>
     <p>
         Ovde se nalaze glavne slike igara navedenih na <a href="index.html"><span style="padding: 0.5%;">početnoj strani</span></a>.
-        Klikom na sliku, slika će se otvoriti u punoj veličini u novom tabu, a klikom ta link iznad slike otvoriće se stranica te igrice takođe u novom tabu.
+        Klikom na sliku, slika će se otvoriti u punoj veličini u novom tabu, a klikom na link iznad slike otvoriće se stranica te igrice takođe u novom tabu.
     </p>
     <div>
         <h4 style="text-align:center">
