--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </p>
 
     <div style="width: auto; text-align: center;">
-        <h4 style="text-align: center;">Sajtovi individualnih igara:</h4>
+        <h4 style="text-align: center;">Wikipedia artikli individualnih igara:</h4>
         <a class="sajtovi" href="https://en.wikipedia.org/wiki/Brawlhalla" target="prvi_iframe"><span>Brawlhalla</span></a>
         <a class="sajtovi" href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="prvi_iframe"><span>Call Of Duty:
                 Warzone</span></a>
