--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -36,40 +36,52 @@
     </h3>
 
     <br>
+    <div style="height: 900px;">
 
-    <p>
-        Neke od navedenih igara imaju jako lepe pesme koje se meni sviđaju. Jedna od takvih je pesma <i>Legends never
-            die</i> iz igrice <b>League of Legends</b>.
-    </p>
+        <div id="levi">
+            <p>
+                Neke od navedenih igara imaju jako lepe pesme koje se meni sviđaju. Jedna od takvih je pesma <i>Legends
+                    never
+                    die</i> iz igrice <b>League of Legends</b>.
+            </p>
 
-    <div>
-        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="100%" height="380"
-            frameborder="0" allowtransparency="true" allow="encrypted-media">
-        </iframe>
-    </div>
+            <div>
+                <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="100%" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media">
+                </iframe>
+            </div>
 
-    <hr>
-    <br>
+        </div>
 
-    <p>
-        Još jedna pesma koja mi se sviđa, a koju je nemoguće napomenuti je legendarna uvodna špica iz igrice <b> Halo</b>
-    </p>
+        <br>
 
-    <div>
-        <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380"
-            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    </div>
+        <div id="centar">
+            <p>
+                Još jedna pesma koja mi se sviđa, a koju je nemoguće napomenuti je legendarna uvodna špica iz igrice <b>
+                    Halo</b>
+            </p>
 
-    <hr>
-    <br>
+            <div>
+                <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
 
-    <p>
-        Igrica <b>Call Of Duty: Warzone</b> ima dobru plejlistu pesama
-    </p>
+        </div>
 
-    <div>
-        <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
-            frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <br>
+
+        <div id="desni">
+            <p>
+                Igrica <b>Call Of Duty: Warzone</b> ima dobru plejlistu pesama
+            </p>
+
+            <div>
+                <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+
+        </div>
+
     </div>
 
     <hr>
