--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -43,7 +43,7 @@
     </p>
 
     <div>
-        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="100%" height="380"
+        <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="300px" height="380"
             frameborder="0" allowtransparency="true" allow="encrypted-media">
         </iframe>
     </div>
@@ -56,7 +56,7 @@
     </p>
 
     <div>
-        <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380"
+        <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300px" height="380"
             frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
 
@@ -68,7 +68,7 @@
     </p>
 
     <div>
-        <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
+        <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300px" height="380"
             frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
 
