--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <script src="js/script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
@@ -33,7 +34,7 @@
         </ul>
     </div>
 
-    <h3>O Stranici</h3>
+    <h3 id="naslov" onmouseout="vratiNaslov()" onmouseover="povecajNaslov()">O Stranici</h3>
     <p>
         Ovo je stranica sa listom <strong><em>top 5 najboljih igrica do 2020. godine</em></strong> po mom mišljenju. Na
         listi se nalaze igre:</p>
