--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <script src="js/script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
@@ -31,7 +32,7 @@
         </ul>
     </div>
 
-    <h3>
+    <h3 id="naslov" onmouseout="vratiNaslov()" onmouseover="povecajNaslov()">
         Muzika Igara
     </h3>
 
