--- a/igre.html
+++ b/igre.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <script src="js/script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
@@ -31,7 +32,7 @@
         </ul>
     </div>
 
-    <h3>Igre</h3>
+    <h3 id="naslov" onmouseout="vratiNaslov()" onmouseover="povecajNaslov()">Igre</h3>
     <p>
         Ovde se nalaze glavne slike igara navedenih na <a href="index.html"><span style="padding: 0.5%;">početnoj strani</span></a>.
         Klikom na sliku, slika će se otvoriti u punoj veličini u novom tabu, a klikom na link iznad slike otvoriće se stranica te igrice takođe u novom tabu.
