--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <script src="js/scriptIndex.js"></script>
     <script src="js/script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
@@ -19,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body onload="dugaJun()" style="background-image: url(Images/controller.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<body style="background-image: url(Images/controller.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <h2 id="vrh"></h2>
 
     <div class="header" id="heder">
